vibecoded backport, i have not much cnfidence in it but will still try